--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-router-dom": "^6.22.3",
     "start": "^5.1.0",
     "swiper": "^11.1.3",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "react-redux": "^9.1.2",
+    "@reduxjs/toolkit": "^2.2.5"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
