--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "swiper": "^11.1.3",
     "yup": "^1.4.0",
     "react-redux": "^9.1.2",
-    "@reduxjs/toolkit": "^2.2.5"
+    "@reduxjs/toolkit": "^2.2.5",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0"
 
   },
   "devDependencies": {
